src/python/k4a/src/k4a/_bindings/k4a.py


#K4A_EXPORT void k4a_image_set_iso_speed(k4a_image_t image_handle, uint32_t iso_speed);
k4a_image_set_iso_speed = _k4a_lib.k4a_image_set_iso_speed
k4a_image_set_iso_speed.restype = None
k4a_image_set_iso_speed.argtypes=(_ImageHandle, _ctypes.c_uint32)


#K4A_EXPORT void k4a_image_reference(k4a_image_t image_handle);
k4a_image_reference = _k4a_lib.k4a_image_reference
k4a_image_reference.restype = None
k4a_image_reference.argtypes=(_ImageHandle,)


#K4A_EXPORT void k4a_image_release(k4a_image_t image_handle);
k4a_image_release = _k4a_lib.k4a_image_release
k4a_image_release.restype = None
k4a_image_release.argtypes=(_ImageHandle,)


#K4A_EXPORT k4a_status_t k4a_device_start_cameras(k4a_device_t device_handle, const k4a_device_configuration_t *config);
k4a_device_start_cameras = _k4a_lib.k4a_device_start_cameras
k4a_device_start_cameras.restype = EWaitStatus
k4a_device_start_cameras.argtypes = (_DeviceHandle, _ctypes.POINTER(DeviceConfiguration))


#K4A_EXPORT void k4a_device_stop_cameras(k4a_device_t device_handle);
k4a_device_stop_cameras = _k4a_lib.k4a_device_stop_cameras
k4a_device_stop_cameras.restype = None
k4a_device_stop_cameras.argtypes=(_DeviceHandle,)


#K4A_EXPORT k4a_status_t k4a_device_start_imu(k4a_device_t device_handle);
k4a_device_start_imu = _k4a_lib.k4a_device_start_imu
k4a_device_start_imu.restype = EStatus
k4a_device_start_imu.argtypes = (_DeviceHandle,)


#K4A_EXPORT void k4a_device_stop_imu(k4a_device_t device_handle);
k4a_device_stop_imu = _k4a_lib.k4a_device_stop_imu
k4a_device_stop_imu.restype = None
k4a_device_stop_imu.argtypes = (_DeviceHandle,)


#K4A_EXPORT k4a_buffer_result_t k4a_device_get_serialnum(k4a_device_t device_handle,
#                                                        char *serial_number,
#                                                        size_t *serial_number_size);
k4a_device_get_serialnum = _k4a_lib.k4a_device_get_serialnum
k4a_device_get_serialnum.restype = EBufferStatus
k4a_device_get_serialnum.argtypes = (_DeviceHandle, 
    _ctypes.POINTER(_ctypes.c_char), _ctypes.POINTER(_ctypes.c_size_t))


#K4A_EXPORT k4a_status_t k4a_device_get_version(k4a_device_t device_handle, HardwareVersion *version);
k4a_device_get_version = _k4a_lib.k4a_device_get_version
k4a_device_get_version.restype = EStatus
k4a_device_get_version.argtypes = (_DeviceHandle, _ctypes.POINTER(HardwareVersion))


#K4A_EXPORT k4a_status_t k4a_device_get_color_control_capabilities(k4a_device_t device_handle,
#                                                                  k4a_color_control_command_t command,
#                                                                  bool *supports_auto,
#                                                                  int32_t *min_value,
#                                                                  int32_t *max_value,
#                                                                  int32_t *step_value,
#                                                                  int32_t *default_value,
#                                                                  k4a_color_control_mode_t *default_mode);
k4a_device_get_color_control_capabilities = _k4a_lib.k4a_device_get_color_control_capabilities
k4a_device_get_color_control_capabilities.restype = EStatus
k4a_device_get_color_control_capabilities.argtypes = (
    _DeviceHandle, _ctypes.c_int, _ctypes.POINTER(_ctypes.c_bool),
    _ctypes.POINTER(_ctypes.c_int32), _ctypes.POINTER(_ctypes.c_int32),
    _ctypes.POINTER(_ctypes.c_int32), _ctypes.POINTER(_ctypes.c_int32),
    _ctypes.POINTER(_ctypes.c_int) )


#K4A_EXPORT k4a_status_t k4a_device_get_color_control(k4a_device_t device_handle,
#                                                     k4a_color_control_command_t command,
#                                                     k4a_color_control_mode_t *mode,
#                                                     int32_t *value);
k4a_device_get_color_control = _k4a_lib.k4a_device_get_color_control
k4a_device_get_color_control.restype = EStatus
k4a_device_get_color_control.argtypes = (_DeviceHandle, _ctypes.c_int, _ctypes.POINTER(_ctypes.c_int), _ctypes.POINTER(_ctypes.c_int32))


#K4A_EXPORT k4a_status_t k4a_device_set_color_control(k4a_device_t device_handle,
#                                                     k4a_color_control_command_t command,
#                                                     k4a_color_control_mode_t mode,
#                                                     int32_t value);
k4a_device_set_color_control = _k4a_lib.k4a_device_set_color_control
k4a_device_set_color_control.restype = EStatus
k4a_device_set_color_control.argtypes = (_DeviceHandle, _ctypes.c_int, _ctypes.c_int, _ctypes.c_int32)


#K4A_EXPORT k4a_buffer_result_t k4a_device_get_raw_calibration(k4a_device_t device_handle,
#                                                              uint8_t *data,
#                                                              size_t *data_size);
k4a_device_get_raw_calibration = _k4a_lib.k4a_device_get_raw_calibration
k4a_device_get_raw_calibration.restype = EBufferStatus
k4a_device_get_raw_calibration.argtypes = (_DeviceHandle, _ctypes.POINTER(_ctypes.c_uint8), _ctypes.POINTER(_ctypes.c_size_t))


#K4A_EXPORT k4a_status_t k4a_device_get_calibration(k4a_device_t device_handle,
#                                                   const k4a_depth_mode_t depth_mode,
#                                                   const k4a_color_resolution_t color_resolution,
#                                                   k4a_calibration_t *calibration);
k4a_device_get_calibration = _k4a_lib.k4a_device_get_calibration
k4a_device_get_calibration.restype = EStatus
k4a_device_get_calibration.argtypes = (_DeviceHandle, _ctypes.c_int, _ctypes.c_int, _ctypes.POINTER(_Calibration))


#K4A_EXPORT k4a_status_t k4a_device_get_sync_jack(k4a_device_t device_handle,
#                                                 bool *sync_in_jack_connected,
#                                                 bool *sync_out_jack_connected);
k4a_device_get_sync_jack = _k4a_lib.k4a_device_get_sync_jack
k4a_device_get_sync_jack.restype = EStatus
k4a_device_get_sync_jack.argtypes = (_DeviceHandle, _ctypes.POINTER(_ctypes.c_bool), _ctypes.POINTER(_ctypes.c_bool))


#K4A_EXPORT k4a_status_t k4a_calibration_get_from_raw(char *raw_calibration,
#                                                     size_t raw_calibration_size,
#                                                     const k4a_depth_mode_t depth_mode,
#                                                     const k4a_color_resolution_t color_resolution,
#                                                     k4a_calibration_t *calibration);
k4a_calibration_get_from_raw = _k4a_lib.k4a_calibration_get_from_raw
k4a_calibration_get_from_raw.restype = EStatus
k4a_calibration_get_from_raw.argtypes = (_ctypes.POINTER(_ctypes.c_char), 
    _ctypes.c_size_t, _ctypes.c_int, _ctypes.c_int, _ctypes.POINTER(_Calibration))


#K4A_EXPORT k4a_status_t k4a_calibration_3d_to_3d(const k4a_calibration_t *calibration,
#                                                 const k4a_float3_t *source_point3d_mm,
#                                                 const k4a_calibration_type_t source_camera,
#                                                 const k4a_calibration_type_t target_camera,
#                                                 k4a_float3_t *target_point3d_mm);
k4a_calibration_3d_to_3d = _k4a_lib.k4a_calibration_3d_to_3d
k4a_calibration_3d_to_3d.restype = EStatus
k4a_calibration_3d_to_3d.argtypes = (
    _ctypes.POINTER(_Calibration), _ctypes.POINTER(_Float3),
    _ctypes.c_int, _ctypes.c_int, _ctypes.POINTER(_Float3))


#K4A_EXPORT k4a_status_t k4a_calibration_2d_to_3d(const k4a_calibration_t *calibration,
#                                                 const k4a_float2_t *source_point2d,
#                                                 const float source_depth_mm,
#                                                 const k4a_calibration_type_t source_camera,
#                                                 const k4a_calibration_type_t target_camera,
#                                                 k4a_float3_t *target_point3d_mm,
#                                                 int *valid);
k4a_calibration_2d_to_3d = _k4a_lib.k4a_calibration_2d_to_3d
k4a_calibration_2d_to_3d.restype = EStatus
k4a_calibration_2d_to_3d.argtypes = (
    _ctypes.POINTER(_Calibration), _ctypes.POINTER(_Float2), _ctypes.c_float,
    _ctypes.c_int, _ctypes.c_int, _ctypes.POINTER(_Float3), _ctypes.POINTER(_ctypes.c_int))


#K4A_EXPORT k4a_status_t k4a_calibration_3d_to_2d(const k4a_calibration_t *calibration,
#                                                 const k4a_float3_t *source_point3d_mm,
#                                                 const k4a_calibration_type_t source_camera,
#                                                 const k4a_calibration_type_t target_camera,
#                                                 k4a_float2_t *target_point2d,
#                                                 int *valid);
k4a_calibration_3d_to_2d = _k4a_lib.k4a_calibration_3d_to_2d
k4a_calibration_3d_to_2d.restype = EStatus
k4a_calibration_3d_to_2d.argtypes = (
    _ctypes.POINTER(_Calibration), _ctypes.POINTER(_Float3),
    _ctypes.c_int, _ctypes.c_int, _ctypes.POINTER(_Float2), _ctypes.POINTER(_ctypes.c_int))


#K4A_EXPORT k4a_status_t k4a_calibration_2d_to_2d(const k4a_calibration_t *calibration,
#                                                 const k4a_float2_t *source_point2d,
#                                                 const float source_depth_mm,
#                                                 const k4a_calibration_type_t source_camera,
#                                                 const k4a_calibration_type_t target_camera,
#                                                 k4a_float2_t *target_point2d,
#                                                 int *valid);
k4a_calibration_2d_to_2d = _k4a_lib.k4a_calibration_2d_to_2d
k4a_calibration_2d_to_2d.restype = EStatus
k4a_calibration_2d_to_2d.argtypes = (
    _ctypes.POINTER(_Calibration), _ctypes.POINTER(_Float2), _ctypes.c_float,
    _ctypes.c_int, _ctypes.c_int, _ctypes.POINTER(_Float2), _ctypes.POINTER(_ctypes.c_int))


#K4A_EXPORT k4a_status_t k4a_calibration_color_2d_to_depth_2d(const k4a_calibration_t *calibration,
#                                                             const k4a_float2_t *source_point2d,
#                                                             const k4a_image_t depth_image,
#                                                             k4a_float2_t *target_point2d,
#                                                             int *valid);
k4a_calibration_color_2d_to_depth_2d = _k4a_lib.k4a_calibration_color_2d_to_depth_2d
k4a_calibration_color_2d_to_depth_2d.restype = EStatus
k4a_calibration_color_2d_to_depth_2d.argtypes = (
    _ctypes.POINTER(_Calibration), _ctypes.POINTER(_Float2), _ImageHandle,
    _ctypes.POINTER(_Float2), _ctypes.POINTER(_ctypes.c_int))


#K4A_EXPORT k4a_transform_t k4a_transformation_create(const k4a_calibration_t *calibration);
k4a_transformation_create = _k4a_lib.k4a_transformation_create
k4a_transformation_create.restype = _TransformationHandle
k4a_transformation_create.argtypes = (_ctypes.POINTER(_Calibration),)


#K4A_EXPORT void k4a_transformation_destroy(k4a_transform_t transformation_handle);
k4a_transformation_destroy = _k4a_lib.k4a_transformation_destroy
k4a_transformation_destroy.restype = None
k4a_transformation_destroy.argtypes = (_TransformationHandle,)

